data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_958.wast
;; 9. **Test 9: Function Call within a Br-Targeted Loop**    - **Description:** Execute a `br` instruction targeting the top of a loop where an indirect function call is placed. Test if the loop re-invokes the correct function.    - **Reasoning:** Checks if `br` instructions targeting loop starts correctly reset for indirect function calls.

(assert_invalid
  (module
    (type $funcType (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $calledFunc)
    (func $calledFunc (param i32) (result i32)
      (i32.add (local.get 0) (i32.const 1))
    )
    (func
      (loop (result i32)
        (i32.const 0)
        (call_indirect (type $funcType) (i32.const 0))
        (br 0)
      )
    )
  )
  "type mismatch"
)